--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
+    "bootstrap-icons": "^1.13.1",
     "html2pdf.js": "^0.10.3",
     "jsbarcode": "^3.11.6",
     "jspdf": "^3.0.1",
