--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "^5.0.1",
     "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
+    "svg2pdf.js": "^2.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
