--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "html2pdf.js": "^0.10.3",
     "jsbarcode": "^3.11.6",
     "jspdf": "^3.0.1",
+    "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
