--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.9.0",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
+    "date-fns": "^4.1.0",
     "html2pdf.js": "^0.10.3",
     "jsbarcode": "^3.11.6",
     "jspdf": "^3.0.1",
