--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-router-dom": "^7.6.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.10.1",
+    "react-slick": "^0.31.0",
     "react-toastify": "^11.0.5",
+    "slick-carousel": "^1.8.1",
     "svg2pdf.js": "^2.5.0",
     "web-vitals": "^2.1.4"
   },
